--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,18 +2,22 @@ not-operable=
 cant-be-connected-to-wire=
 
 [mod-name]
-title=Maraxsis
+title=Metal and Stars
 
 [mod-description]
-description=Dive into the uncharted waters of Maraxsis, a world where the sea covers everything. Utilize submarines to explore, deploy fiber optics for long-distance signals, and master the challenges of deep-sea logistics. BEWARE: You aren't alone in the depths...
+description= It's a big universe out there, and there are other ways to leave the solar system. 4 new destinations with new machines, technologies, and unique processes
 
 [space-location-name]
-maraxsis=Maraxsis
-maraxsis-trench=Trench
+shipyard=Neumann V
+nix=Nix
+ringworld=Circus
+mirandus=Mirandus
 
 [space-location-description]
-maraxsis=A planet fully covered by vast oceans. The pressure is extreme here, anything will succumb to the ocean without the protection of a submarine. Many machines only function inside the protection of an [entity=maraxsis-pressure-dome].
-maraxsis-trench=An abyssal trench that is only accessible by submerging a submarine on the surface of Maraxsis. The trench is a completely dark environment, the only light source being the occasional geothermal vent which can be harvested for [fluid=lava] and [item=sulfur].
+shipyard=A derelict satelite, with unusually calm space debris. Uninstructed nanites, microscopic multipurpose robots, are omnipresent on the structure - probably both what's ruined it and what's kept it together this long. Conditions are similar to a space platform. [item=gravity-assembler] and [item=conduit] are scattered around the ruin.
+nix=A tundra world with exceptionally long, dark nights. Also home to anomalous [entity=dark-matter-vent] that contain a lot of energy if you can harvest it. [planet=nix] has freezing conditions similar to [planet=aquilo] - it's resource plentiful, but extracting those resources in the cold can be challenging.
+ringworld=A constructed ring encircling a cool star. The half of the ring is with water is completely overgrown, and the other half is a desert. It's always day here, so solar technology is very reliable.
+mirandus=A shattered planet that exists in quantum entanglement. You can't land here, but the mirandite asteroids in its orbit can be mined for [item=quantite-a], a shifting mineral with atom-shifting properties.
 
 [technology-name]
 cargo-landing-pad-capacity=Cargo landing pad capacity
