english localization, more icons

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -49,6 +49,15 @@ mirandite-processing=Mirandite processing
 neodymium-processing=Neodymium processing
 quantum-stabilization=Quantum stabilization
 quantum-science-pack=Quantum science pack
+overclock-module-1=Overclock module
+overclock-module-2=Overclock module 2
+overclock-module-3=Overclock module 3
+gauss-rockets=Gauss rockets
+quantum-ore-conversion=Quantum ore conversion
+thorium-enrichment=Thorium enrichment
+thorium-ammo=Thorium ammo
+
+
 
 nanite-rocket-construction=Nanite rocket construction
 insulated-rocket-body=Insulated rocket body
@@ -118,6 +127,17 @@ rocket-ammo-productivity=Rocket ammo productivity
 railgun-ammo-productivity=Railgun ammo productivity
 
 [entity-name]
+barometric-vice=Barometric vice
+quantum-stabilizer=Quantum stabilizer
+microgravity-lab=Microgravity lab
+gravity-assembler=Gravity assembler
+liquid-fuel-heating-tower=Liquid fuel heating tower
+antimatter-construction-robot=Antimatter construction robot
+antimatter-logistic-robot=Antimatter logistic robot
+small-mirandite-asteroid=small mirandite asteroid
+medium-mirandite-asteroid=medium mirandite asteroid
+big-mirandite-asteroid=big mirandite asteroid
+huge-mirandite-asteroid=huge mirandite asteroid
 iron-copper-ore=Iron copper ore
 coal-stone-ore=Coal stone ore
 dark-matter-vent=Dark matter vent
@@ -126,6 +146,11 @@ heavy-water-vent=Heavy water vent
 gold-sands=Gold sands
 military-scrap=Military scrap
 ringworld-detritus=Bitumen tar
+
+robot-spawner=robot spawner
+hostile-construction-bot=hostile construction bot
+jellyfish-spawner=jellyfish spawner
+glowing-jellyfish=glowing jellyfish
 
 carbon-iceberg-huge=Carbon iceberg huge
 carbon-iceberg-big=Carbon iceberg big
@@ -137,6 +162,10 @@ carbon-iceberg-tiny=Carbon iceberg tiny
 
 
 [item-name]
+overclock-module-1=Overclock module 1
+overclock-module-2=Overclock module 2
+overclock-module-3=Overclock module 3
+prototype-mech-armor=Prototype mech armor
 mirandite-asteroid-chunk=Mirandite asteroid chunk
 neodymium-ore=Neodymium ore
 thorium=Thorium
@@ -185,6 +214,7 @@ barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
 gravity-assembler=Gravity assembler
 conduit=Conduit
+gauss-rocket=gauss rocket
 
 [item-description]
 mirandite-asteroid-chunk=Mirandite asteroid chunk
@@ -261,24 +291,151 @@ liquid-nuclear-fuel=Liquid nuclear fuel
 liquid-dark-matter-fuel=Liquid dark matter fuel
 
 [recipe-name]
-maraxsis-salt=Salt electrolysis
-maraxsis-saturated-salt-filter=Brackish water filtration
-maraxsis-water=Water
-maraxsis-smelt-microplastics=Smelt microplastics
-maraxsis-microplastics=Fish rendering
-maraxsis-carbon=Burnt fish
-maraxsis-salt-filter-cleaning=Salt filter cleaning
-maraxsis-liquid-atmosphere-decompression=Liquid atmosphere decompression
-maraxsis-limestone-processing=Limestone processing
-maraxsis-hydrolox-rocket-fuel=Hydrolox rocket fuel
-maraxsis-geothermal-sulfur=Geothermal sulfur
-maraxsis-nutrients-from-tropical-fish=Nutrients from tropical fish
-maraxsis-fluid-void=Void 100 × __1__
-maraxsis-petroleum-gas-cracking=Petroleum gas cracking to heavy oil
+gauss-rocket=gauss rocket
+gauss-rocket-casting=gauss rocket casting
+neodymium-plate=Neodymium plate
+neodymium-alloy-plate=Neodymium alloy plate
+quantum-shard-a=Quantum shard A
+quantum-shard-b=Quantum shard B
+quantum-shard-c=Quantum shard C
+volatile-quantum-science-pack=Volatile quantum science pack
+inert-science-pack-salvage=Inert science pack salvage
+quantum-science-pack=Quantum science pack
+thorium-enrichment-process=Thorium enrichment process
+mirandite-sludge=Mirandite sludge
+mirandite-processing=Mirandite processing
+crude-slush-processing=Crude slush processing
+dark-matter-compression=Dark matter compression
+dark-matter-crystal=Dark matter crystal
+dry-concrete=Dry concrete
+dark-matter-fuel=Dark matter fuel
+dark-matter-fuel-cell=Dark matter fuel cell
+charcoal=Charcoal
+manufactured-diamond=Manufactured diamond
+ice-compression=Ice compression
+dense-stone-brick=Dense stone brick
+anomaly-science-pack=Anomaly science pack
+catalyzed-anomaly-science-pack=Catalyzed anomaly science pack
+nanites=Nanites
+nanothruster=Nanothruster
+nanograbber=Nanograbber
+nanocrusher=Nanocrusher
+nanite-science-pack=Nanite science pack
+nanite-platform-foundation=Nanite platform foundation
+nanite-platform-starter-pack=Nanite platform starter pack
+carbonic-asteroid-refined-crushing=Carbonic asteroid refined crushing
+sloppy-asteroid-smelting=Sloppy asteroid smelting
+heavy-water-processing=Heavy water processing
+gold-plate=Gold plate
+molten-gold=Molten gold
+gold-cable=Gold cable
+casting-gold-cable=Casting gold cable
+casting-gold-plate=Casting gold plate
+gold-foil=Gold foil
+multilayer-insulation=Multilayer insulation
+glass-plate=Glass plate
+glass-billet-reuse=Glass billet reuse
+molten-glass=Molten glass
+casting-glass-plate=Casting glass plate
+aspheric-lens=Aspheric lens
+process-bitumen=Process bitumen
+bone-to-calcite=Bone to calcite
+ring-science-pack=Ring science pack
+high-speed-processor=High-speed processor
+overclock-module-1=Overclock module
+overclock-module-2=Overclock module 2
+overclock-module-3=Overclock module 3
+prototype-mech-armor=Prototype mech armor
+antimatter-construction-robot=Antimatter construction robot
+antimatter-logistic-robot=Antimatter logistic robot
+liquid-fuel-heating-tower=Liquid fuel heating tower
+barometric-vice=Barometric vice
+quantum-stabilizer=Quantum stabilizer
+gravity-assembler=Gravity assembler
+conduit=Conduit
+microgravity-lab=Microgravity lab
+
+iron-ore-from-stone=Iron ore from stone
+copper-ore-from-iron-ore=Copper ore from iron ore
+stone-from-copper-ore=Stone from copper ore
+
+liquid-rocket-fuel=Liquid rocket fuel
+liquid-nuclear-fuel=Liquid nuclear fuel
+liquid-dark-matter-fuel=Liquid dark matter fuel
+empty-liquid-rocket-fuel=Empty liquid rocket fuel
+empty-liquid-nuclear-fuel=Empty liquid nuclear fuel
+empty-liquid-dark-matter-fuel=Empty liquid dark matter fuel
+canister-liquid-rocket-fuel=Canister liquid rocket fuel
+canister-liquid-nuclear-fuel=Canister liquid nuclear fuel
+canister-liquid-dark-matter-fuel=Canister liquid dark matter fuel
+
+nano-rocket-part=Nano rocket part
+ring-rocket-part=Ring rocket part
+anomalous-rocket-part=Anomalous rocket part
+
 
 [recipe-description]
-maraxsis-electricity=Generates more energy based on the quality of salt.\n__1__
-maraxsis-electricity-quality-description=[font=default-bold][color=__3__,__4__,__5__]__1__ salt:[/color][/font] __2__.0 MJ
+neodymium-plate=Neodymium plate
+neodymium-alloy-plate=Neodymium alloy plate
+quantum-shard-a=Quantum shard A
+quantum-shard-b=Quantum shard B
+quantum-shard-c=Quantum shard C
+volatile-quantum-science-pack=Volatile quantum science pack
+inert-science-pack-salvage=Inert science pack salvage
+quantum-science-pack=Quantum science pack
+thorium-enrichment-process=Thorium enrichment process
+mirandite-sludge=Mirandite sludge
+mirandite-processing=Mirandite processing
+crude-slush-processing=Crude slush processing
+dark-matter-compression=Dark matter compression
+dark-matter-crystal=Dark matter crystal
+dry-concrete=Dry concrete
+dark-matter-fuel=Dark matter fuel
+dark-matter-fuel-cell=Dark matter fuel cell
+charcoal=Charcoal
+manufactured-diamond=Manufactured diamond
+ice-compression=Ice compression
+dense-stone-brick=Dense stone brick
+anomaly-science-pack=Anomaly science pack
+catalyzed-anomaly-science-pack=Catalyzed anomaly science pack
+nanites=Nanites
+nanothruster=Nanothruster
+nanograbber=Nanograbber
+nanocrusher=Nanocrusher
+nanite-science-pack=Nanite science pack
+nanite-platform-foundation=Nanite platform foundation
+nanite-platform-starter-pack=Nanite platform starter pack
+carbonic-asteroid-refined-crushing=Carbonic asteroid refined crushing
+sloppy-asteroid-smelting=Sloppy asteroid smelting
+heavy-water-processing=Heavy water processing
+gold-plate=Gold plate
+molten-gold=Molten gold
+gold-cable=Gold cable
+casting-gold-cable=Casting gold cable
+casting-gold-plate=Casting gold plate
+gold-foil=Gold foil
+multilayer-insulation=Multilayer insulation
+glass-plate=Glass plate
+glass-billet-reuse=Glass billet reuse
+molten-glass=Molten glass
+casting-glass-plate=Casting glass plate
+aspheric-lens=Aspheric lens
+process-bitumen=Process bitumen
+bone-to-calcite=Bone to calcite
+ring-science-pack=Ring science pack
+high-speed-processor=High-speed processor
+overclock-module=Overclock module
+overclock-module-2=Overclock module 2
+overclock-module-3=Overclock module 3
+prototype-mech-armor=Prototype mech armor
+antimatter-construction-robot=Antimatter construction robot
+antimatter-logistic-robot=Antimatter logistic robot
+liquid-fuel-heating-tower=Liquid fuel heating tower
+barometric-vice=Barometric vice
+quantum-stabilizer=Quantum stabilizer
+gravity-assembler=Gravity assembler
+conduit=Conduit
+microgravity-lab=Microgravity lab
 
 [tile-name]
 
