--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,3 @@
-not-operable=
-cant-be-connected-to-wire=
 
 [mod-name]
 title=Metal and Stars
@@ -18,6 +16,11 @@ shipyard=A derelict satelite, with unusually calm space debris. Uninstructed nan
 nix=A tundra world with exceptionally long, dark nights. Also home to anomalous [entity=dark-matter-vent] that contain a lot of energy if you can harvest it. [planet=nix] has freezing conditions similar to [planet=aquilo] - it's resource plentiful, but extracting those resources in the cold can be challenging.
 ringworld=A constructed ring encircling a cool star. The half of the ring is with water is completely overgrown, and the other half is a desert. It's always day here, so solar technology is very reliable.
 mirandus=A shattered planet that exists in quantum entanglement. You can't land here, but the mirandite asteroids in its orbit can be mined for [item=quantite-a], a shifting mineral with atom-shifting properties.
+
+[autoplace-control-names]
+nix_enemy_base=Nix enemy bases
+ringworld_robot_enemy_base=Ringworld robot enemy bases
+ringworld_snapper_enemy_base=Ringworld snapper enemy bases
 
 [technology-name]
 planet-discovery-shipyard=Planet discovery shipyard
@@ -56,8 +59,6 @@ gauss-rockets=Gauss rockets
 quantum-ore-conversion=Quantum ore conversion
 thorium-enrichment=Thorium enrichment
 thorium-ammo=Thorium ammo
-
-
 
 nanite-rocket-construction=Nanite rocket construction
 insulated-rocket-body=Insulated rocket body
@@ -216,6 +217,7 @@ gravity-assembler=Gravity assembler
 conduit=Conduit
 gauss-rocket=gauss rocket
 
+
 [item-description]
 mirandite-asteroid-chunk=Mirandite asteroid chunk
 neodymium-ore=Neodymium ore
@@ -354,6 +356,7 @@ quantum-stabilizer=Quantum stabilizer
 gravity-assembler=Gravity assembler
 conduit=Conduit
 microgravity-lab=Microgravity lab
+thorium-rounds-magazine=Thorium rounds magazine
 
 iron-ore-from-stone=Iron ore from stone
 copper-ore-from-iron-ore=Copper ore from iron ore
@@ -438,22 +441,35 @@ conduit=Conduit
 microgravity-lab=Microgravity lab
 
 [tile-name]
+snow-patchy-grass=Snowy grass
+ice-rough-nix=Rough ice
+ice-smooth-nix=Smooth ice
+
+empty-space-shipyard=Empty space
+space-platform-foundation-shipyard=Space derelict foundation
+gray-goo-tile=Gray goo tile
+
+ring_sand_1=Artificial sand 1
+ring_sand_2=Artificial sand 2
+ring_undergrowth_thin=Ring undergrowth thin
+ring_undergrowth_thin_dark=Ring undergrowth thin dark
+ring_undergrowth_thick=Ring undergrowth thick
+ring_undergrowth_thick_dark=Ring undergrowth thick dark
+sand-1-ringworld=Sand 1 ringworld
+sand-2-ringworld=Sand 2 ringworld
+blue-grass-2=Artificial grass
+blue-grass-2-light=Artificial grass light
+blue-grass-2-dark=Artificial grass dark
+undergrowth-thin=Undergrowth thin
+undergrowth-thin-dark=Undergrowth thin dark
+undergrowth-thick=Undergrowth thick
+undergrowth-thick-dark=Undergrowth thick dark
 
 [recipe-category-name]
-maraxsis-hydro-plant=Hydro plant
+compression=Compression
+quantum=Quantum
+nanotech=Nanotech
+overclock=Overclock
+conversion=Conversion
 
-[tips-and-tricks-item-name]
-maraxsis-briefing=Maraxsis briefing
-maraxsis-trench-exploration=Trench exploration
-maraxsis-underwater-machines=Underwater machines
-
-[tips-and-tricks-item-description]
-maraxsis-briefing=[planet=maraxsis] is a fully submerged world with no islands on the entire surface. Without a [entity=maraxsis-diesel-submarine], you will drown in fifteen minutes.\nMost machines except for the [entity=chemical-plant] and [entity=maraxsis-hydro-plant] are not designed to handle extreme pressure and will only function inside a [entity=maraxsis-pressure-dome].\n[fluid=maraxsis-saline-water] can be pumped by placing an [entity=offshore-pump] anywhere. The three biomes are ocean plains, coral reef, and deepsea trench.\n[fluid=lava] can be found in the trench however many other materials such [fluid=maraxsis-atmosphere], [item=carbon-fiber], and [item=tungsten-plate] must be shipped in from other planets.\n[entity=rocket-silo] cannot launch rockets without first researching [technology=maraxsis-project-seadragon].
-maraxsis-trench-exploration=Occasionally while exploring Maraxsis you may find a deep gash in the planet's crust. This gash drops thousands of kilometers to an underwater trench. While above the trench, use __CONTROL__maraxsis-trench-submerge__ inside a [item=maraxsis-diesel-submarine] to decend. The deepsea trench is a dangerous place. It is completely dark and you will need [technology=maraxsis-torpedoes] to defend yourself. You will be crushed in thirty seconds without the protection of a [item=maraxsis-diesel-submarine] or a [item=maraxsis-nuclear-submarine].
-maraxsis-underwater-machines=[entity=chemical-plant] and [entity=maraxsis-hydro-plant] are sealed and designed for use under pressure. However many of your machines no longer function underwater on [planet=maraxsis].\n\nBanned machines in the [planet=maraxsis-trench]:\n- [entity=rocket-silo], [entity=cargo-landing-pad], [entity=locomotive]\n\nMachines that function underwater:\n- [entity=sp-spidertron-dock], [entity=small-lamp]\n- [entity=chemical-plant], [entity=maraxsis-hydro-plant], [entity=maraxsis-salt-reactor], [entity=maraxsis-conduit]\n- [entity=transport-belt], [entity=splitter], [entity=underground-belt]\n- [entity=steel-chest], [entity=active-provider-chest], [entity=passive-provider-chest], [entity=requester-chest], [entity=buffer-chest], [entity=storage-chest]\n- [entity=inserter]\n- [entity=constant-combinator], [entity=arithmetic-combinator], [entity=decider-combinator], [entity=selector-combinator]\n- [entity=pipe], [entity=pipe-to-ground], [entity=pump], [entity=storage-tank]\n- [entity=small-electric-pole], [entity=medium-electric-pole], [entity=big-electric-pole], [entity=substation]\n- [entity=solar-panel], [entity=stone-wall], [entity=gate]\n\nMachines that require a [entity=maraxsis-pressure-dome]:\n- [entity=boiler], [entity=steam-engine], [entity=heating-tower]\n- [entity=nuclear-reactor], [entity=heat-exchanger], [entity=heat-pipe], [entity=steam-turbine]\n- [entity=fusion-reactor], [entity=fusion-generator]\n- [entity=accumulator], [entity=beacon]\n- [entity=assembling-machine-1], [entity=assembling-machine-2], [entity=assembling-machine-3]\n- [entity=stone-furnace], [entity=steel-furnace], [entity=electric-furnace]\n- [entity=oil-refinery], [entity=centrifuge], [entity=recycler]\n- [entity=foundry], [entity=electromagnetic-plant], [entity=biochamber], [entity=cryogenic-plant]\n- [entity=lab], [entity=biolab]\n\nMachines that cannot be placed inside a [entity=maraxsis-pressure-dome] but can be placed on the seabed:\n- [entity=gun-turret], [entity=laser-turret], [entity=rocket-turret], [entity=tesla-turret], [entity=railgun-turret]\n- [entity=land-mine], [entity=rocket-silo]\n- [entity=electric-mining-drill], [entity=big-mining-drill]\n\nMachines that don't function at all underwater:\n- [entity=artillery-turret], [entity=artillery-wagon]\n- [entity=car], [entity=tank], [entity=spidertron]\n- [entity=roboport], [entity=radar], [entity=flamethrower-turret]\n\n[entity=locomotive] will function underwater, however you must use [entity=rail-support] when building on the seabed.\n[entity=train-stop] and [entity=rail-ramp] can only be built inside a [entity=maraxsis-pressure-dome].
-
-[modifier-description]
-maraxsis-torpedoes-damage-bonus=Torpedo damage: +__1__
-cargo-landing-pad-count=Cargo landing pads per planet: +__1__
-maraxsis-project-seadragon=Allows to build rocket silos underwater on [planet=maraxsis].
 
