--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -8,7 +8,7 @@ description= It's a big universe out there, and there are other ways to leave th
 [space-location-name]
 shipyard=Neumann V
 nix=Nix
-ringworld=Circus
+ringworld=Circa
 mirandus=Mirandus
 
 [space-location-description]
