--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -9,7 +9,7 @@ description= It's a big universe out there, and there are other ways to leave th
 shipyard=Neumann V
 nix=Nix
 ringworld=Circa
-mirandus=Mirandus
+mirandus-a=Mirandus-A
 
 [space-location-description]
 shipyard=A derelict satelite, with unusually calm space debris. Uninstructed nanites, microscopic multipurpose robots, are omnipresent on the structure - probably both what's ruined it and what's kept it together this long. Conditions are similar to a space platform. [item=gravity-assembler] and [item=conduit] are scattered around the ruin.
@@ -52,13 +52,15 @@ mirandite-processing=Mirandite processing
 neodymium-processing=Neodymium processing
 quantum-stabilization=Quantum stabilization
 quantum-science-pack=Quantum science pack
-overclock-module-1=Overclock module
+overclock-module=Overclock module
 overclock-module-2=Overclock module 2
 overclock-module-3=Overclock module 3
 gauss-rockets=Gauss rockets
 quantum-ore-conversion=Quantum ore conversion
 thorium-enrichment=Thorium enrichment
 thorium-ammo=Thorium ammo
+prototype-mech-armor=Prototype mech armor
+antimatter-robots=antimatter robots
 
 nanite-rocket-construction=Nanite rocket construction
 insulated-rocket-body=Insulated rocket body
@@ -103,11 +105,14 @@ gold-processing=Gold processing
 advanced-insulative-material=Advanced insulative material
 ring-science-pack=Ring science pack
 gold-wired-electronics=Gold wired electronics
-planet-discovery-mirandus=Planet discovery mirandus
+planet-discovery-mirandus= Mirandus is a shattered world, surrounded by Mirandite asteroids. This is a new category of asteroids, so be ready for them.
 mirandite-processing=Mirandite processing
 neodymium-processing=Neodymium processing
 quantum-stabilization=Quantum stabilization
 quantum-science-pack=Quantum science pack
+overclock-module=Overclock modules allow for production bonuses with no speed penalty, at the cost of increased power consumption
+prototype-mech-armor=Prototype mech armor
+antimatter-robots=allows for the construction of expensive robots that don't require recharging
 
 nanite-rocket-construction=Nanite rocket construction
 insulated-rocket-body=Insulated rocket body
@@ -147,6 +152,7 @@ heavy-water-vent=Heavy water vent
 gold-sands=Gold sands
 military-scrap=Military scrap
 ringworld-detritus=Bitumen tar
+conduit=Neumann Conduit
 
 robot-spawner=robot spawner
 hostile-construction-bot=hostile construction bot
@@ -160,6 +166,7 @@ carbon-iceberg-small=Carbon iceberg small
 carbon-iceberg-tiny=Carbon iceberg tiny
 
 [entity-description]
+conduit=partially connects to the derelict platforms electrical grid, and produces (functionally) free power on Neumann
 
 
 [item-name]
@@ -214,7 +221,7 @@ ring-science-pack=Ring science pack
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
 gravity-assembler=Gravity assembler
-conduit=Conduit
+conduit=Neumann Conduit
 gauss-rocket=gauss rocket
 
 
@@ -266,7 +273,7 @@ ring-science-pack=Ring science pack
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
 gravity-assembler=Gravity assembler
-conduit=Conduit
+conduit=partially connects to the derelict platforms electrical grid, and produces (functionally) free power on Neumann
 
 [fluid-name]
 gray-goo=Gray goo
@@ -354,7 +361,7 @@ liquid-fuel-heating-tower=Liquid fuel heating tower
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
 gravity-assembler=Gravity assembler
-conduit=Conduit
+conduit=Neumann Conduit
 microgravity-lab=Microgravity lab
 thorium-rounds-magazine=Thorium rounds magazine
 
@@ -437,7 +444,7 @@ liquid-fuel-heating-tower=Liquid fuel heating tower
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
 gravity-assembler=Gravity assembler
-conduit=Conduit
+conduit=Neumann Conduit
 microgravity-lab=Microgravity lab
 
 [tile-name]
