--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -22,6 +22,9 @@ nix_enemy_base=Nix enemy bases
 ringworld_robot_enemy_base=Ringworld robot enemy bases
 ringworld_snapper_enemy_base=Ringworld snapper enemy bases
 
+[asteroid-chunk-names]
+mirandite-asteroid-chunk=Mirandite asteroid chunk
+
 [technology-name]
 planet-discovery-shipyard=Planet discovery shipyard
 basic-low-gravity-assembly=Basic low gravity assembly
@@ -140,10 +143,10 @@ gravity-assembler=Gravity assembler
 liquid-fuel-heating-tower=Liquid fuel heating tower
 antimatter-construction-robot=Antimatter construction robot
 antimatter-logistic-robot=Antimatter logistic robot
-small-mirandite-asteroid=small mirandite asteroid
-medium-mirandite-asteroid=medium mirandite asteroid
-big-mirandite-asteroid=big mirandite asteroid
-huge-mirandite-asteroid=huge mirandite asteroid
+small-mirandite-asteroid=Small mirandite asteroid
+medium-mirandite-asteroid=Medium mirandite asteroid
+big-mirandite-asteroid=Big mirandite asteroid
+huge-mirandite-asteroid=Huge mirandite asteroid
 iron-copper-ore=Iron copper ore
 coal-stone-ore=Coal stone ore
 dark-matter-vent=Dark matter vent
@@ -364,6 +367,7 @@ gravity-assembler=Gravity assembler
 conduit=Neumann Conduit
 microgravity-lab=Microgravity lab
 thorium-rounds-magazine=Thorium rounds magazine
+thorium-cannon-shell=thorium cannon shell
 
 iron-ore-from-stone=Iron ore from stone
 copper-ore-from-iron-ore=Copper ore from iron ore
