--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -25,6 +25,12 @@ ringworld_snapper_enemy_base=Ringworld snapper enemy bases
 [asteroid-chunk-names]
 mirandite-asteroid-chunk=Mirandite asteroid chunk
 
+[surface-property-name]
+local-electricity-grid=Local electricity grid
+
+[surface-property-unit]
+local-electricity-grid=__1__GW
+
 [technology-name]
 planet-discovery-shipyard=Planet discovery shipyard
 basic-low-gravity-assembly=Basic low gravity assembly
@@ -156,6 +162,7 @@ gold-sands=Gold sands
 military-scrap=Military scrap
 ringworld-detritus=Bitumen tar
 conduit=Neumann Conduit
+space-chest=Space chest
 
 robot-spawner=robot spawner
 hostile-construction-bot=hostile construction bot
@@ -226,6 +233,7 @@ quantum-stabilizer=Quantum stabilizer
 gravity-assembler=Gravity assembler
 conduit=Neumann Conduit
 gauss-rocket=gauss rocket
+space-chest=Space chest
 
 
 [item-description]
@@ -368,6 +376,9 @@ conduit=Neumann Conduit
 microgravity-lab=Microgravity lab
 thorium-rounds-magazine=Thorium rounds magazine
 thorium-cannon-shell=thorium cannon shell
+pyrolytic-carbon=Pyrolytic carbon
+space-chest=Space chest
+nanite-cargo-bay=Nanite cargo bay
 
 iron-ore-from-stone=Iron ore from stone
 copper-ore-from-iron-ore=Copper ore from iron ore
