whole bunch of changes

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -180,7 +180,7 @@ conduit=partially connects to the derelict platforms electrical grid, and produc
 
 
 [item-name]
-overclock-module-1=Overclock module 1
+overclock-module=Overclock module 1
 overclock-module-2=Overclock module 2
 overclock-module-3=Overclock module 3
 prototype-mech-armor=Prototype mech armor
@@ -362,7 +362,7 @@ process-bitumen=Process bitumen
 bone-to-calcite=Bone to calcite
 ring-science-pack=Ring science pack
 high-speed-processor=High-speed processor
-overclock-module-1=Overclock module
+overclock-module=Overclock module
 overclock-module-2=Overclock module 2
 overclock-module-3=Overclock module 3
 prototype-mech-armor=Prototype mech armor
@@ -379,6 +379,8 @@ thorium-cannon-shell=thorium cannon shell
 pyrolytic-carbon=Pyrolytic carbon
 space-chest=Space chest
 nanite-cargo-bay=Nanite cargo bay
+uranium-fuel-cell-233=Uranium 233 fuel cell
+
 
 iron-ore-from-stone=Iron ore from stone
 copper-ore-from-iron-ore=Copper ore from iron ore
