more stuff. ready for release

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -88,6 +88,9 @@ gold-refinement-productivity=Gold refinement productivity
 bullet-productivity=Bullet productivity
 rocket-ammo-productivity=Rocket ammo productivity
 railgun-ammo-productivity=Railgun ammo productivity
+module-productivity-basic=Basic module productivity
+module-productivity-intermediate=Intermediate module productivity
+module-productivity-advanced=Advanced module productivity
 
 [technology-description]
 planet-discovery-shipyard=Planet discovery shipyard
