--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -148,7 +148,7 @@ railgun-ammo-productivity=Railgun ammo productivity
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
 microgravity-lab=Microgravity lab
-gravity-assembler=Gravity assembler
+microgravity-assembler=Microgravity assembler
 liquid-fuel-heating-tower=Liquid fuel heating tower
 antimatter-construction-robot=Antimatter construction robot
 antimatter-logistic-robot=Antimatter logistic robot
@@ -164,7 +164,7 @@ heavy-water-vent=Heavy water vent
 gold-sands=Gold sands
 military-scrap=Military scrap
 ringworld-detritus=Bitumen tar
-conduit=Neumann Conduit
+neumann-conduit=Neumann Conduit
 space-chest=Space chest
 
 robot-spawner=robot spawner
@@ -179,7 +179,7 @@ carbon-iceberg-small=Carbon iceberg small
 carbon-iceberg-tiny=Carbon iceberg tiny
 
 [entity-description]
-conduit=partially connects to the derelict platforms electrical grid, and produces (functionally) free power on Neumann
+neumann-conduit=partially connects to the derelict platforms electrical grid, and produces (functionally) free power on Neumann
 
 
 [item-name]
@@ -233,8 +233,8 @@ bitumen=Bitumen
 ring-science-pack=Ring science pack
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
-gravity-assembler=Gravity assembler
-conduit=Neumann Conduit
+microgravity-assembler=Microgravity assembler
+neumann-conduit=Neumann Conduit
 gauss-rocket=gauss rocket
 space-chest=Space chest
 
@@ -286,8 +286,8 @@ bitumen=Bitumen
 ring-science-pack=Ring science pack
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
-gravity-assembler=Gravity assembler
-conduit=partially connects to the derelict platforms electrical grid, and produces (functionally) free power on Neumann
+microgravity-assembler=Microgravity assembler
+neumann-conduit=partially connects to the derelict platforms electrical grid, and produces (functionally) free power on Neumann
 
 [fluid-name]
 gray-goo=Gray goo
@@ -333,7 +333,7 @@ dark-matter-crystal=Dark matter crystal
 dry-concrete=Dry concrete
 dark-matter-fuel=Dark matter fuel
 dark-matter-fuel-cell=Dark matter fuel cell
-charcoal=Charcoal
+pyrolytic-charcoal=Pyrolytic charcoal
 manufactured-diamond=Manufactured diamond
 ice-compression=Ice compression
 dense-stone-brick=Dense stone brick
@@ -374,8 +374,8 @@ antimatter-logistic-robot=Antimatter logistic robot
 liquid-fuel-heating-tower=Liquid fuel heating tower
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
-gravity-assembler=Gravity assembler
-conduit=Neumann Conduit
+microgravity-assembler=Microgravity assembler
+neumann-conduit=Neumann Conduit
 microgravity-lab=Microgravity lab
 thorium-rounds-magazine=Thorium rounds magazine
 thorium-cannon-shell=thorium cannon shell
@@ -422,7 +422,7 @@ dark-matter-crystal=Dark matter crystal
 dry-concrete=Dry concrete
 dark-matter-fuel=Dark matter fuel
 dark-matter-fuel-cell=Dark matter fuel cell
-charcoal=Charcoal
+pyrolytic-charcoal=Pyrolytic charcoal
 manufactured-diamond=Manufactured diamond
 ice-compression=Ice compression
 dense-stone-brick=Dense stone brick
@@ -463,8 +463,8 @@ antimatter-logistic-robot=Antimatter logistic robot
 liquid-fuel-heating-tower=Liquid fuel heating tower
 barometric-vice=Barometric vice
 quantum-stabilizer=Quantum stabilizer
-gravity-assembler=Gravity assembler
-conduit=Neumann Conduit
+microgravity-assembler=Microgravity assembler
+neumann-conduit=Neumann Conduit
 microgravity-lab=Microgravity lab
 
 [tile-name]
