--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -5,6 +5,14 @@ title=Metal and Stars
 [mod-description]
 description= It's a big universe out there, and there are other ways to leave the solar system. Several new destinations with new machines, technologies, and unique processes
 
+[mod-setting-name]
+is-nix-frozen-enabled=Localized test setting name
+is-shipyard-bot-penalty-enabled=Localized test setting description
+
+[mod-setting-description]
+is-nix-frozen-enabled=Localized test setting description
+is-shipyard-bot-penalty-enabled=Localized test setting description
+
 [space-location-name]
 shipyard=Neumann V
 nix=Nix
