--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -6,24 +6,26 @@ title=Metal and Stars
 description= It's a big universe out there, and there are other ways to leave the solar system. Several new destinations with new machines, technologies, and unique processes
 
 [mod-setting-name]
-is-nix-frozen-enabled=Localized test setting name
-is-shipyard-bot-penalty-enabled=Localized test setting description
+is-nix-frozen-enabled=Nix requires heating
 
 [mod-setting-description]
-is-nix-frozen-enabled=Localized test setting description
-is-shipyard-bot-penalty-enabled=Localized test setting description
+is-nix-frozen-enabled=This will make Nix require heating like Aquilo does.
 
 [space-location-name]
 shipyard=Neumann V
 nix=Nix
 ringworld=Circa
 mirandus-a=Mirandus-A
+calidus-senestella-gate-senestella=Stargate to Calidus
+calidus-senestella-gate-calidus=Stargate to Senestella
 
 [space-location-description]
 shipyard=A derelict satelite, with unusually calm space debris. Uninstructed nanites, microscopic multipurpose robots, are omnipresent on the structure - probably both what's ruined it and what's kept it together this long. Conditions are similar to a space platform. [item=gravity-assembler] and [item=conduit] are scattered around the ruin.
 nix=A tundra world with exceptionally long, dark nights. Also home to anomalous [entity=dark-matter-vent] that contain a lot of energy if you can harvest it. [planet=nix] has freezing conditions similar to [planet=aquilo] - it's resource plentiful, but extracting those resources in the cold can be challenging.
 ringworld=A constructed ring encircling a cool star. The half of the ring is with water is completely overgrown, and the other half is a desert. It's always day here, so solar technology is very reliable.
 mirandus=A shattered planet that exists in quantum entanglement. You can't land here, but the mirandite asteroids in its orbit can be mined for [item=quantite-a], a shifting mineral with atom-shifting properties.
+calidus-senestella-gate-senestella=precursor technology, this gateway allows ships to quickly travel between two locations in space. This one leads to Calidus (the starting system).
+calidus-senestella-gate-calidus=precursor technology, this gateway allows ships to quickly travel between two locations in space. This one leads to Senestella (Metal and Stars).
 
 [autoplace-control-names]
 nix_enemy_base=Nix enemy bases
@@ -100,6 +102,9 @@ module-productivity-basic=Basic module productivity
 module-productivity-intermediate=Intermediate module productivity
 module-productivity-advanced=Advanced module productivity
 
+mechanical-bioculture=Mechanical bioculture
+advanced-bioculture=Advanced bioculture
+
 [technology-description]
 planet-discovery-shipyard=Planet discovery shipyard
 basic-low-gravity-assembly=Basic low gravity assembly
@@ -152,8 +157,12 @@ bullet-productivity=Bullet productivity
 rocket-ammo-productivity=Rocket ammo productivity
 railgun-ammo-productivity=Railgun ammo productivity
 
+mechanical-bioculture=Mechanical bioculture
+advanced-bioculture=Advanced bioculture
+
 [entity-name]
 barometric-vice=Barometric vice
+microculture-vat=Microculture vat
 quantum-stabilizer=Quantum stabilizer
 microgravity-lab=Microgravity lab
 microgravity-assembler=Microgravity assembler
@@ -234,68 +243,23 @@ bone-fragments=Bone fragments
 bitumen=Bitumen
 ring-science-pack=Ring science pack
 barometric-vice=Barometric vice
+microculture-vat=Microculture vat
 quantum-stabilizer=Quantum stabilizer
 microgravity-assembler=Microgravity assembler
 neumann-conduit=Neumann Conduit
 gauss-rocket=gauss rocket
 space-chest=Space chest
+algae-bacteria=Algae
+ammoniac-bacteria=Ammoniac bacteria
+petro-bacteria=Petrobacteria
+radio-bacteria=Radiotrophic bacteria
+thermo-bacteria=Thermophilic bacteria
 
 
 [item-description]
-mirandite-asteroid-chunk=Mirandite asteroid chunk
-neodymium-ore=Neodymium ore
-thorium=Thorium
-uranium-233=Uranium-233
-neodymium-plate=Neodymium plate
-empty-fuel-canister=Empty fuel canister
-quantite-a=Quantite A
-quantite-b=Quantite B
-quantite-c=Quantite C
-quantum-shard-a=Quantum shard A
-quantum-shard-b=Quantum shard B
-quantum-shard-c=Quantum shard C
-quantum-science-pack=Quantum science pack
-volatile-quantum-science-pack=Volatile quantum science pack
-unstable-quantum-science-pack=Unstable quantum science pack
-inert-quantum-science-pack=Inert quantum science pack
-ice-xv=Ice XV
-dense-stone-brick=Dense stone brick
-antimatter=Antimatter
-dark-matter-chunk=Dark matter chunk
-dark-matter-compressed=Dark matter compressed
-diamond=Diamond
-dark-matter-crystal=Dark matter crystal
-liquid-fuel-heating-tower=Liquid fuel heating tower
-anomaly-science-pack=Anomaly science pack
-dark-matter-fuel-cell=Dark matter fuel cell
-depleted-fuel-cell=Depleted fuel cell
-dark-matter-fuel=Dark matter fuel
-nanites=Nanites
-nanite-science-pack=Nanite science pack
-multilayer-insulation=Multilayer insulation
-gold-foil=Gold foil
-aspheric-lens=Aspheric lens
-high-speed-processor=High-speed processor
-optical-resonator=Optical resonator
-bone-fragments=Bone fragments
-bitumen=Bitumen
-ring-science-pack=Ring science pack
-barometric-vice=Barometric vice
-quantum-stabilizer=Quantum stabilizer
-microgravity-assembler=Microgravity assembler
 neumann-conduit=partially connects to the derelict platforms electrical grid, and produces (functionally) free power on Neumann
 
 [fluid-name]
-gray-goo=Gray goo
-mirandite-sludge=Mirandite sludge
-dark-matter-fluid=Dark matter fluid
-crude-slush=Crude slush
-heavy-water=Heavy water
-liquid-rocket-fuel=Liquid rocket fuel
-liquid-nuclear-fuel=Liquid nuclear fuel
-liquid-dark-matter-fuel=Liquid dark matter fuel
-
-[fluid-description]
 gray-goo=Gray goo
 mirandite-sludge=Mirandite sludge
 dark-matter-fluid=Dark matter fluid
@@ -356,6 +320,7 @@ antimatter-construction-robot=Antimatter construction robot
 antimatter-logistic-robot=Antimatter logistic robot
 liquid-fuel-heating-tower=Liquid fuel heating tower
 barometric-vice=Barometric vice
+microculture-vat=Microculture vat
 quantum-stabilizer=Quantum stabilizer
 microgravity-assembler=Microgravity assembler
 neumann-conduit=Neumann Conduit
@@ -366,7 +331,12 @@ pyrolytic-carbon=Pyrolytic carbon
 space-chest=Space chest
 nanite-cargo-bay=Nanite cargo bay
 uranium-fuel-cell-233=Uranium 233 fuel cell
-
+thermo-bacteria-cultivation=Thermophilic bacteria cultivation
+thermo-bacteria-fermentation=Thermophilic bacteria fermentation
+radio-bacteria-cultivation=Radiotrophic bacteria cultivation
+petro-bacteria-cultivation=Petrobacteria cultivation
+ammoniac-bacteria-cultivation=Ammoniac bacteria cultivation
+algae-bacteria-cultivation=Algae cultivation
 
 iron-ore-from-stone=Iron ore from stone
 copper-ore-from-iron-ore=Copper ore from iron ore
@@ -385,61 +355,6 @@ canister-liquid-dark-matter-fuel=Canister liquid dark matter fuel
 nano-rocket-part=Nano rocket part
 ring-rocket-part=Ring rocket part
 anomalous-rocket-part=Anomalous rocket part
-
-
-[recipe-description]
-neodymium-plate=Neodymium plate
-neodymium-alloy-plate=Neodymium alloy plate
-quantum-shard-a=Quantum shard A
-quantum-shard-b=Quantum shard B
-quantum-shard-c=Quantum shard C
-volatile-quantum-science-pack=Volatile quantum science pack
-inert-science-pack-salvage=Inert science pack salvage
-quantum-science-pack=Quantum science pack
-thorium-enrichment-process=Thorium enrichment process
-mirandite-sludge=Mirandite sludge
-mirandite-processing=Mirandite processing
-crude-slush-processing=Crude slush processing
-dark-matter-compression=Dark matter compression
-dark-matter-crystal=Dark matter crystal
-dry-concrete=Dry concrete
-dark-matter-fuel=Dark matter fuel
-dark-matter-fuel-cell=Dark matter fuel cell
-pyrolytic-charcoal=Pyrolytic charcoal
-manufactured-diamond=Manufactured diamond
-ice-compression=Ice compression
-dense-stone-brick=Dense stone brick
-anomaly-science-pack=Anomaly science pack
-catalyzed-anomaly-science-pack=Catalyzed anomaly science pack
-nanites=Nanites
-nanothruster=Nanothruster
-nanograbber=Nanograbber
-nanocrusher=Nanocrusher
-nanite-science-pack=Nanite science pack
-nanite-platform-foundation=Nanite platform foundation
-nanite-platform-starter-pack=Nanite platform starter pack
-carbonic-asteroid-refined-crushing=Carbonic asteroid refined crushing
-sloppy-asteroid-smelting=Sloppy asteroid smelting
-heavy-water-processing=Heavy water processing
-gold-foil=Gold foil
-multilayer-insulation=Multilayer insulation
-aspheric-lens=Aspheric lens
-process-bitumen=Process bitumen
-bone-to-calcite=Bone to calcite
-ring-science-pack=Ring science pack
-high-speed-processor=High-speed processor
-overclock-module=Overclock module
-overclock-module-2=Overclock module 2
-overclock-module-3=Overclock module 3
-prototype-mech-armor=Prototype mech armor
-antimatter-construction-robot=Antimatter construction robot
-antimatter-logistic-robot=Antimatter logistic robot
-liquid-fuel-heating-tower=Liquid fuel heating tower
-barometric-vice=Barometric vice
-quantum-stabilizer=Quantum stabilizer
-microgravity-assembler=Microgravity assembler
-neumann-conduit=Neumann Conduit
-microgravity-lab=Microgravity lab
 
 [tile-name]
 snow-patchy-grass=Snowy grass
