--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -331,6 +331,10 @@ pyrolytic-carbon=Pyrolytic carbon
 space-chest=Space chest
 nanite-cargo-bay=Nanite cargo bay
 uranium-fuel-cell-233=Uranium 233 fuel cell
+thermo-bacteria=Thermophilic bacteria
+radio-bacteria=Radiotrophic bacteria
+petro-bacteria=Petrobacteria
+algae-bacteria=Algae
 thermo-bacteria-cultivation=Thermophilic bacteria cultivation
 thermo-bacteria-fermentation=Thermophilic bacteria fermentation
 radio-bacteria-cultivation=Radiotrophic bacteria cultivation
