migrating space chest

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -182,7 +182,7 @@ gold-sands=Gold sands
 military-scrap=Military scrap
 ringworld-detritus=Bitumen tar
 neumann-conduit=Neumann Conduit
-space-chest=Space chest
+space-chest-ms=Space chest
 
 robot-spawner=robot spawner
 hostile-construction-bot=hostile construction bot
@@ -248,7 +248,7 @@ quantum-stabilizer=Quantum stabilizer
 microgravity-assembler=Microgravity assembler
 neumann-conduit=Neumann Conduit
 gauss-rocket=gauss rocket
-space-chest=Space chest
+space-chest-ms=Space chest
 algae-bacteria=Algae
 ammoniac-bacteria=Ammoniac bacteria
 petro-bacteria=Petrobacteria
@@ -328,7 +328,7 @@ microgravity-lab=Microgravity lab
 thorium-rounds-magazine=Thorium rounds magazine
 thorium-cannon-shell=thorium cannon shell
 pyrolytic-carbon=Pyrolytic carbon
-space-chest=Space chest
+space-chest-ms=Space chest
 nanite-cargo-bay=Nanite cargo bay
 uranium-fuel-cell-233=Uranium 233 fuel cell
 thermo-bacteria=Thermophilic bacteria
