--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -12,7 +12,7 @@ is-nix-frozen-enabled=尼克斯星地表需要热量
 is-nix-frozen-enabled=启用将使尼克斯星地表需要热量，就像玄冥星一样
 
 [space-location-name]
-shipyard=纽曼V
+shipyard=诺依曼V
 nix=尼克斯星
 ringworld=半分之环
 mirandus-a=米兰达斯-A
@@ -42,7 +42,7 @@ local-electricity-grid=本地电网供应总量
 local-electricity-grid=__1__GW
 
 [technology-name]
-planet-discovery-shipyard=发现疑似行星天体：纽曼V
+planet-discovery-shipyard=发现疑似行星天体：诺依曼V
 basic-low-gravity-assembly=基础低重力组装技术
 platform-power-pylons=平台电网接入点
 nanite-extraction=纳米机器提取
@@ -106,7 +106,7 @@ mechanical-bioculture=机械化生物培养过程
 advanced-bioculture=高等机械化生物培养过程
 
 [technology-description]
-planet-discovery-shipyard=发现废弃人造船坞：纽曼V
+planet-discovery-shipyard=发现废弃人造船坞：诺依曼V
 basic-low-gravity-assembly=基础低重力组装
 platform-power-pylons=平台电网接入点
 nanite-extraction=纳米机器提取
@@ -181,7 +181,7 @@ heavy-water-vent=重水泉
 gold-sands=含金沙料
 military-scrap=军用物资废料
 ringworld-detritus=沥青
-neumann-conduit=纽曼电网接线器
+neumann-conduit=诺依曼V电网接线器
 space-chest-ms=太空储物箱
 
 robot-spawner=无人机站点
@@ -196,7 +196,7 @@ carbon-iceberg-small=小型碳冰岩
 carbon-iceberg-tiny=微型碳冰岩
 
 [entity-description]
-neumann-conduit=链接纽曼V电网的装置，从本地电网获取免费电力
+neumann-conduit=链接诺依曼V电网的装置，从本地电网获取免费电力
 
 [item-name]
 overclock-module=超载插件
@@ -245,7 +245,7 @@ barometric-vice=高压室
 microculture-vat=微生态培养缸
 quantum-stabilizer=量子稳固设备
 microgravity-assembler=微重力组装机
-neumann-conduit=纽曼电网接线器
+neumann-conduit=诺依曼V电网接线器
 gauss-rocket=高斯火箭弹
 space-chest-ms=太空储物箱
 algae-bacteria=绿藻
@@ -256,7 +256,7 @@ thermo-bacteria=嗜热细菌
 
 
 [item-description]
-neumann-conduit=链接纽曼V电网的装置，从本地电网获取免费电力
+neumann-conduit=链接诺依曼V电网的装置，从本地电网获取免费电力
 
 [fluid-name]
 gray-goo=灰粘浆
@@ -322,7 +322,7 @@ barometric-vice=高压室
 microculture-vat=微生态培养缸
 quantum-stabilizer=量子稳固设备
 microgravity-assembler=微重力组装机
-neumann-conduit=纽曼电网接线器
+neumann-conduit=诺依曼V电网接线器
 microgravity-lab=微重力研究中心
 thorium-rounds-magazine=钍填充弹匣
 thorium-cannon-shell=钍填充加农炮弹
@@ -365,7 +365,7 @@ ice-rough-nix=粗糙冰面
 ice-smooth-nix=平滑冰面
 
 empty-space-shipyard=虚空
-space-platform-foundation-shipyard=纽曼V基座
+space-platform-foundation-shipyard=诺依曼V基座
 gray-goo-tile=灰粘浆
 
 ring_sand_1=人造沙地1
