some localization context

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -11,6 +11,12 @@ is-nix-frozen-enabled=Nix requires heating
 [mod-setting-description]
 is-nix-frozen-enabled=This will make Nix require heating like Aquilo does.
 
+#Neumann is a surname. V is the roman numeral for 5.
+#Nix is latin for night
+#Circa is a latin similar word for ring
+#Mirandus is from latin for surprise
+#Calidus is from space exploration mod, means hot
+#Senestella is from latin, means old star
 [space-location-name]
 shipyard=Neumann V
 nix=Nix
@@ -74,6 +80,7 @@ quantum-science-pack=Quantum science pack
 overclock-module=Overclock module
 overclock-module-2=Overclock module 2
 overclock-module-3=Overclock module 3
+#Gauss is a surname of a famous scientist, Carl Friedrich Gauss
 gauss-rockets=Gauss rockets
 quantum-ore-conversion=Quantum ore conversion
 thorium-enrichment=Thorium enrichment
